# data-validation-pandera

./: .gitignore  README.md  pyproject.toml
nashville_housing_data_validation/: create_schema.py  validate.py
schema/: inferred_schema.py
validation/: validation_results.xlsx
